# vector

./: .editorconfig  .geminiignore  .gitignore  AGENTS.md  Cargo.toml  README.md  cspell.json
.agents/: mcp_config.json
frontend/cli/get-vector/: Cargo.toml  README.md
frontend/cli/get-vector/src/: lib.rs  main.rs  main_test.rs
frontend/cli/get-vector/src/commands/: mod.rs  update_mcp_vector.rs  update_mcp_vector_test.rs
frontend/cli/vector-database/: Cargo.toml  README.md
frontend/cli/vector-database/src/: lib.rs  main.rs
frontend/cli/vector-database/src/commands/: mod.rs  package_add.rs  package_add_test.rs  package_sync.rs  package_sync_test.rs  rag_init.rs  rag_init_test.rs  rag_passthrough.rs  rag_passthrough_test.rs  rag_search.rs  rag_search_test.rs  rag_update_database.rs  rag_update_database_test.rs
frontend/cli/vector-database/tests/: package_sync_integration.rs
frontend/cli/vector-rag/: Cargo.toml  README.md
frontend/cli/vector-rag/src/: lib.rs  main.rs  main_test.rs
frontend/cli/vector-rag/src/commands/: mod.rs  rag_init.rs  rag_init_test.rs  rag_search.rs  rag_search_test.rs  rag_update_database.rs  rag_update_database_test.rs
mcp/vector/: Cargo.toml  README.md
mcp/vector/src/: error.rs  error_test.rs  lib.rs  main.rs  main_test.rs  server.rs  server_test.rs
mcp/vector/src/release/: mod.rs  version.rs  version_test.rs
mcp/vector/src/tools/: document.rs  document_test.rs  language.rs  language_test.rs  mod.rs  project.rs  project_test.rs  rag.rs  rag_test.rs  version.rs  version_test.rs
mcp/vector/tests/: version_cli.rs
runtime/channel/: Cargo.toml  README.md
runtime/channel/src/: cancel.rs  cancel_test.rs  channel.rs  channel_test.rs  config.rs  config_test.rs  dispatcher.rs  dispatcher_test.rs  event.rs  event_test.rs  factory.rs  factory_test.rs  handler.rs  handler_test.rs  lib.rs
runtime/core/: Cargo.toml  README.md
runtime/core/src/: cancel.rs  cancel_test.rs  channel.rs  channel_test.rs  encoding.rs  encoding_test.rs  error.rs  error_test.rs  event.rs  event_test.rs  lib.rs  operation.rs  operation_test.rs  plugin.rs  plugin_test.rs  result.rs  result_test.rs
runtime/doc/: Cargo.toml  README.md
runtime/doc/src/: lib.rs
runtime/doc/src/internal/: identifier.rs  identifier_test.rs  locate.rs  locate_test.rs  mod.rs  naming.rs  naming_test.rs  next_code.rs  next_code_test.rs  slug.rs  slug_test.rs  vector_yaml.rs  vector_yaml_test.rs
runtime/doc/src/operations/: bootstrap_doc.rs  bootstrap_doc_test.rs  bootstrap_doc_type.rs  bootstrap_doc_type_test.rs  create_doc.rs  create_doc_test.rs  create_doc_type.rs  create_doc_type_test.rs  create_document_rule.rs  create_document_rule_test.rs  find_doc.rs  find_doc_test.rs  get_doc_types_tags.rs  get_doc_types_tags_test.rs  mod.rs  patch_doc.rs  patch_doc_apply_patch.rs  patch_doc_apply_patch_test.rs  patch_doc_test.rs  project_extension_setup.rs  project_extension_setup_test.rs  replace_doc.rs  replace_doc_test.rs  support.rs  support_test.rs  validate.rs  validate_fix.rs  validate_fix_test.rs  validate_stem.rs  validate_stem_test.rs  validate_test.rs
runtime/doc/src/types/: config.rs  config_test.rs  loader.rs  loader_test.rs  mod.rs
runtime/io/: Cargo.toml  README.md
runtime/io/src/: alias.rs  alias_test.rs  bytes.rs  bytes_test.rs  directory.rs  directory_test.rs  error.rs  error_test.rs  file.rs  file_test.rs  lib.rs  lib_test.rs  memory.rs  memory_test.rs  path.rs  path_test.rs  text.rs  text_test.rs
runtime/io/src/command/: builder.rs  builder_test.rs  executor.rs  executor_test.rs  handle.rs  handle_test.rs  mock_handle.rs  mock_handle_test.rs  mod.rs  mod_test.rs  process_executor.rs  process_executor_test.rs  spec.rs  spec_test.rs
runtime/project/: Cargo.toml  README.md
runtime/project/assets/: .gitattributes  .gitignore  CLAUDE.md  opencode.json
runtime/project/assets/.gemini/antigravity-cli/: mcp_config.json
runtime/project/assets/.vector/: agents.yaml  document-types.yaml  language-rules.yaml
runtime/project/src/: lib.rs  operation.rs  operation_test.rs  setup.rs  setup_test.rs
runtime/rag/: Cargo.toml  README.md
runtime/rag/src/: chunking.rs  chunking_test.rs  defaults.rs  defaults_test.rs  embedding.rs  embedding_test.rs  lib.rs  lifecycle.rs  lifecycle_test.rs  pipeline.rs  pipeline_test.rs  storage.rs  storage_test.rs
runtime/rag/src/lifecycle/: mod.rs  query.rs  query_test.rs  store.rs  store_test.rs
runtime/rag/src/operations/: hybrid_search.rs  hybrid_search_support.rs  hybrid_search_support_test.rs  hybrid_search_test.rs  index_workspace.rs  index_workspace_test.rs  init_rag_store.rs  init_rag_store_test.rs  mod.rs  rag_indexer.rs  rag_indexer_test.rs  retrieval_context.rs  retrieval_context_test.rs  support.rs  support_test.rs
xtask/: Cargo.toml  README.md
xtask/io/: Cargo.toml  README.md
xtask/io/src/: disk.rs  disk_test.rs  error.rs  error_test.rs  lib.rs  lib_test.rs  memory.rs  memory_test.rs  shell.rs  shell_test.rs  traits.rs  traits_test.rs  types.rs  types_test.rs  zip.rs  zip_test.rs
xtask/io/tests/: zip_test.rs
xtask/src/: main.rs  main_dispatcher.rs  main_dispatcher_test.rs  quality.rs  quality_lint.rs  quality_lint_test.rs  quality_stats.rs  quality_stats_test.rs  quality_test.rs  quality_test_runner.rs  quality_test_runner_test.rs  vault.rs  vault_query.rs  vault_query_test.rs  vault_test.rs
xtask/src/lint_rules/: mod.rs  rule.rs  rule_test.rs  runner.rs  runner_test.rs  walker.rs  walker_test.rs
xtask/src/lint_rules/rules/: aggregator_only_exports.rs  aggregator_only_exports_test.rs  file_too_long.rs  file_too_long_test.rs  mod.rs  no_allow_anywhere.rs  no_allow_anywhere_test.rs  no_allow_outside_test.rs  no_allow_outside_test_test.rs  no_inline_tests.rs  no_inline_tests_test.rs  no_pub_struct_fields.rs  no_pub_struct_fields_test.rs  no_std_process_command.rs  no_std_process_command_test.rs  no_to_string_in_map_err.rs  no_to_string_in_map_err_test.rs  no_tuple_in_signature.rs  no_tuple_in_signature_test.rs  no_workspace_dependency.rs  no_workspace_dependency_test.rs  registry.rs  registry_test.rs
(+322 files in other folders)
