[workspace]
resolver = "2"
members = ["runtime/core", "runtime/channel", "runtime/io", "runtime/project", "runtime/doc", "runtime/language", "mcp/vector"]

[workspace.dependencies]
thiserror = "2.0.17"
tokio = { version = "1", features = ["sync", "rt", "fs", "io-util", "rt-multi-thread", "process", "macros"] }
paste = "1.0"
rmcp = { version = "1.6.0", features = ["server", "transport-io"] }
runtime-channel = { path = "runtime/channel" }
runtime-core = { path = "runtime/core" }
runtime-doc = { path = "runtime/doc" }
runtime-io = { path = "runtime/io" }
runtime-language = { path = "runtime/language" }
runtime-project = { path = "runtime/project" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
walkdir = "2"
regex = "1"
chrono = "0.4"
mcp-vector = { path = "mcp/vector" }

[workspace.package]
edition = "2024"
rust-version = "1.95.0"
version = "ext-v1.4.0"
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
exhaustive_enums = "warn"
exhaustive_structs = "warn"
undocumented_unsafe_blocks = "warn"
dbg_macro = "warn"
panic = "warn"
unimplemented = "warn"
wildcard_imports = "warn"
borrow_as_ptr = "warn"
ref_binding_to_reference = "warn"
needless_pass_by_ref_mut = "warn"
needless_pass_by_value = "warn"
arc_with_non_send_sync = "warn"
mutex_integer = "warn"
large_futures = "warn"
manual_async_fn = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"

[workspace.lints.rust]
missing_docs = "warn"

[profile.release]
lto = true
strip = true
