[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build and quality automation for the Forge workspace"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
io = { package = "xtask-io", path = "io" }

[dev-dependencies]
io = { package = "xtask-io", path = "io", features = ["test-utils"] }
