[package]
name = "mcp-vector"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
rmcp = { workspace = true }
runtime-channel = { workspace = true }
runtime-core = { workspace = true }
runtime-io = { workspace = true }
runtime-doc = { workspace = true }
runtime-language = { workspace = true }
runtime-project = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
dunce = { workspace = true }
rmcp = { workspace = true, features = ["client"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
