[package]
name = "runtime-rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
runtime-markdown = { workspace = true }

[dev-dependencies]
runtime-io = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt"] }

[lints]
workspace = true
