[package]
name = "vector-rag"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "vector-rag"
path = "src/main.rs"

[dependencies]
runtime-channel = { workspace = true }
runtime-core = { workspace = true }
runtime-rag = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
